Get One,Delete,and Put APIs for school added
